common/app/assets/stylesheets/module/commercial/v2/_jobs.scss
/* ==========================================================================
   Jobs component
   ========================================================================== */
.commercial--jobs--v2 {
    /* Logo adjustment */
    .i-jobs-logo {
        @include mq(leftCol) {
            margin-left: 7px;
        }
    }

    /* Line items */
    .lineitem__image {
        border: $gs-gutter/4 solid #fff;
        width: 120px;

        @include mq(tablet) {
            width: 150px;
        }

        @include mq(desktop) {
            width: auto;
            height: 60px;
        }
    }
    
    @include mq($from: tablet, $until:desktop) {
        .lineitem__image {
            width: 100%;
            @include box-sizing(border-box);
        }
    }

    /* Line items - low relevance */
    .commercial__relevance--low {
        @include mq($until: tablet) {
            .lineitem.lineitem--low {
                padding-left: 120px + $gs-gutter*1;

                &:nth-child(2) {
                    display: none;
                }
            }

            .lineitem__image {
                float: left;
                position: absolute;
                left: 0;
                top: $gs-baseline/2;
            }
        }

        @include mq(tablet) {
            .lineitem {
                min-height: $gs-baseline*18.5;
            }
        }
    }

    /* Sector navigation */
    .commercial--jobs__sectors {
        padding: 0;
        margin: 0;
        overflow: hidden;

        @include mq(tablet) {
            padding-right: $gs-gutter/2;
        }
    }

    .commercial--jobs__sector {
        list-style: none;
        width: 50%;
        float: left;

        &:last-child .commercial--jobs__sector__link {
            font-weight: bold;
        }

        &:nth-child(2n+1) .commercial--jobs__sector__link {
            margin-right: $gs-gutter/2;
        }
    }

    .commercial--jobs__sector__link {
        @include fs-headline(2);
        color: $c-neutral1;
        border-top: 1px solid $c-neutral4;
        padding: $gs-baseline/1.5 0;
        display: block;
    }
}

